media/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  ports:
  - name: service
    port: 8096
    targetPort: 8096
  selector:
    app: jellyfin
